Enable code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,6 @@ install:
   - travis_retry composer install --no-interaction --prefer-source
 
 script:
-  - vendor/bin/phpunit --verbose --coverage-text
+  - vendor/bin/phpunit --verbose --coverage-clover=coverage.clover
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --access-token="your-token" --format=php-clover coverage.clover
